# charms.proxylib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  publish.yaml
jmodelproxylib/: errors.py  model.py  view.py
tests/unit/: test_model.py  test_view.py
